--- a/atestkit/gradle.properties
+++ b/atestkit/gradle.properties
@@ -20,15 +20,14 @@ LICENSES_NAME=The Apache Software License, Version 2.0
 LICENSES_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 
 MODULE_NAME=ATestKit
-PROJECT_GROUP=com.dannylee1991
-USER_ORG=dannylee1991
+PROJECT_GROUP=com.dannylee
 
 SITE_URL=https://github.com/DannyLee1991/ATestKit
 GIT_URL=https://github.com/DannyLee1991/ATestKit.git
 
 PROJECT_DESCRPTION=ATestKit for Android
 
-DEVELOPER_ID=leojianan
-DEVELOPER_NAME=DannyLee1991
-DEVELOPER_EMAIL=leojianan@gmail.com
+DEVELOPER_ID=dannylee
+DEVELOPER_NAME=dannylee
+DEVELOPER_EMAIL=leejianan1@gmail.com
 
