add: add back door logic and fix some bugs

--- a/atestkit/src/main/AndroidManifest.xml
+++ b/atestkit/src/main/AndroidManifest.xml
@@ -7,13 +7,16 @@
     <application>
 
         <activity
-            android:name=".TestActivity"
+            android:name=".ATestKitMainActivity"
             android:icon="@drawable/ce"
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".BackDoorActivity">
         </activity>
 
         <service android:name=".service.FWService" />
